--- a/ImageToWebp/ImageToWebp.csproj
+++ b/ImageToWebp/ImageToWebp.csproj
@@ -6,7 +6,9 @@
     <Authors>Jack</Authors>
     <Description>当用户访问.png .jpg .gif文件时，根据客户浏览器对webp格式的支持程度，自动压缩为webp图片，响应给用户， 不支持webp的用户，将以传统图片压缩方式压缩图片，响应给用户</Description>
     <RepositoryUrl>https://github.com/simpleway2016/ImageToWebp.git</RepositoryUrl>
-    <Version>1.0.0.2</Version>
+    <Version>1.0.0.3</Version>
+    <AssemblyVersion>1.0.0.3</AssemblyVersion>
+    <FileVersion>1.0.0.3</FileVersion>
   </PropertyGroup>
 
   <ItemGroup>
